...
    onBeginTimeChange: (Date) -> Unit,
    onEndTimeChange: (Date) -> Unit,
    onPauseDurationChange: (Long) -> Unit,
    onCommentsChange: (String) -> Unit
) {
  item {
    val beginTimeTitle = "Effective time of start"
    TimePickerField(defaultPadding, beginTimeTitle, beginTime) { onBeginTimeChange(it) }
  }

  item {
    val endTimeTitle = "Effective time of end"
    TimePickerField(defaultPadding, endTimeTitle, endTime) { onEndTimeChange(it) }
  }

  item { PauseField(defaultPadding, pauseDuration) { onPauseDurationChange(it) } }

  item { VehicleProblemField(defaultPadding, flight.vehicles, onConfirm = onConfirm) }
...
        modifier = Modifier.fillMaxWidth().padding(horizontal = defaultPadding),
    )
  }

  item {
    TitledInputTextField(
        title = "Comments",
        value = comments,
        onValueChange = { onCommentsChange(it) },
        padding = defaultPadding)
  }
}

...
