...
          CircularList(
              items = (0..23).map { "%02d".format(it) },
              modifier = Modifier.fillMaxWidth().weight(1f),
              hourListState,
              itemHeight = itemHeight,
              visibleItemCount = visibleItemCount,
              testTag = "HourCircularList")
          CircularList(
              items = (0..59).map { "%02d".format(it) },
              modifier = Modifier.fillMaxWidth().weight(1f),
              minuteListState,
              itemHeight = itemHeight,
              visibleItemCount = visibleItemCount,
              testTag = "MinuteCircularList")
        }
      },
      confirmButton = {
        TextButton(
            onClick = {
              val offset = visibleItemCount / 2
              val hour = (hourListState.firstVisibleItemIndex + offset) % 24
              val minute = (minuteListState.firstVisibleItemIndex + offset) % 60
              timeDuration = ((hour * 60 + minute) * 60_000).toLong() // convert to milliseconds
              onConfirm(timeDuration)
            },
            modifier = Modifier.testTag("AlertDialogConfirm")) {
              Text("Confirm")
            }
      },
      dismissButton = {
        TextButton(onClick = { onDismiss() }, modifier = Modifier.testTag("AlertDialogDismiss")) {
          Text("Dismiss")
...
