...
                  DisplaySingleMetric("Comments", report.comments)
                  DisplaySingleMetric(
                      metric = "Begin", value = DateUtility.dateToHourMinuteString(report.begin))
                  DisplaySingleMetric(
                      metric = "End", value = DateUtility.dateToHourMinuteString(report.end))
                  DisplaySingleMetric(
                      metric = "Pause duration",
                      value = DateUtility.formatTime(report.pauseDuration.toLong()))
                  when (report) {
                    is PilotReport -> {
                      DisplaySingleMetric(
                          metric = "Number of passengers on board",
                          value = report.effectivePax.toString())
...
